Keep moving forward

--- a/3 Feature Selection/1.0.3 GAM_contData copy.ipynb
+++ b/3 Feature Selection/1.0.3 GAM_contData copy.ipynb
@@ -2,7 +2,32 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: pygam in c:\\users\\saust\\appdata\\roaming\\python\\python310\\site-packages (0.9.0)\n",
+            "Requirement already satisfied: progressbar2<5.0.0,>=4.2.0 in c:\\users\\saust\\appdata\\roaming\\python\\python310\\site-packages (from pygam) (4.2.0)\n",
+            "Requirement already satisfied: scipy<2.0.0,>=1.10.1 in c:\\users\\saust\\appdata\\roaming\\python\\python310\\site-packages (from pygam) (1.11.4)\n",
+            "Requirement already satisfied: numpy<2.0.0,>=1.24.2 in c:\\users\\saust\\anaconda3\\lib\\site-packages (from pygam) (1.26.2)\n",
+            "Requirement already satisfied: python-utils>=3.0.0 in c:\\users\\saust\\anaconda3\\lib\\site-packages (from progressbar2<5.0.0,>=4.2.0->pygam) (3.8.1)\n",
+            "Requirement already satisfied: typing-extensions>3.10.0.2 in c:\\users\\saust\\anaconda3\\lib\\site-packages (from python-utils>=3.0.0->progressbar2<5.0.0,>=4.2.0->pygam) (4.4.0)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
+      "source": [
+        "%pip install pygam --user\n",
+        "%pip install FuzzyTM>=0.4.0 --user\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -11,9 +36,8 @@
       "source": [
         "# Import necessary libraries\n",
         "import pandas as pd\n",
-        "from statsmodels.formula.api import ols\n",
-        "import statsmodels.api as sm\n",
-        "from sklearn.model_selection import train_test_split"
+        "from pygam import LinearGAM, s\n",
+        "from sklearn.model_selection import train_test_split\n"
       ]
     },
     {
@@ -31,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -75,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -93,7 +117,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -104,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {
         "trusted": true
       },
@@ -149,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -179,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -192,7 +216,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -203,96 +227,75 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "LinearGAM                                                                                                 \n",
+            "=============================================== ==========================================================\n",
+            "Distribution:                        NormalDist Effective DoF:                                     49.1345\n",
+            "Link Function:                     IdentityLink Log Likelihood:                               -206011.7987\n",
+            "Number of Samples:                        39391 AIC:                                           412123.8666\n",
+            "                                                AICc:                                          412123.9969\n",
+            "                                                GCV:                                               74.1791\n",
+            "                                                Scale:                                             74.0126\n",
+            "                                                Pseudo R-Squared:                                    0.038\n",
+            "==========================================================================================================\n",
+            "Feature Function                  Lambda               Rank         EDoF         P > x        Sig. Code   \n",
+            "================================= ==================== ============ ============ ============ ============\n",
+            "s(0)                              [0.6]                20           17.1         1.11e-16     ***         \n",
+            "s(2)                              [0.6]                20           16.6         1.11e-16     ***         \n",
+            "s(22)                             [0.6]                20           15.5         1.11e-16     ***         \n",
+            "intercept                                              1            0.0          1.11e-16     ***         \n",
+            "==========================================================================================================\n",
+            "Significance codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+            "\n",
+            "WARNING: Fitting splines and a linear function to a feature introduces a model identifiability problem\n",
+            "         which can cause p-values to appear significant when they are not.\n",
+            "\n",
+            "WARNING: p-values calculated in this manner behave correctly for un-penalized models or models with\n",
+            "         known smoothing parameters, but when smoothing parameters have been estimated, the p-values\n",
+            "         are typically lower than they should be, meaning that the tests reject the null too readily.\n",
+            "None\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\saust\\AppData\\Local\\Temp\\ipykernel_71828\\4130909567.py:18: UserWarning: KNOWN BUG: p-values computed in this summary are likely much smaller than they should be. \n",
+            " \n",
+            "Please do not make inferences based on these values! \n",
+            "\n",
+            "Collaborate on a solution, and stay up to date at: \n",
+            "github.com/dswah/pyGAM/issues/163 \n",
+            "\n",
+            "  print(gam.summary())\n"
+          ]
+        }
+      ],
       "source": [
+        "# Assuming df_All is your DataFrame and 'Butanol' is your target column\n",
+        "\n",
         "# Splitting into train and test\n",
-        "X = df_All.drop('Butanol', axis=1)  # Assuming 'target' is your target column\n",
+        "X = df_All.drop('Butanol', axis=1)\n",
         "y = df_All['Butanol']\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "\n",
-        "#=============================================\n",
-        "# TRAIN & EVALUATE REGRESSION MODEL\n",
-        "#=============================================\n",
+        "# Get the indices of the specific features\n",
+        "feature_indices = [X_train.columns.get_loc(feature) for feature in ['425 %Al', 'DI55152', 'TC55555']]\n",
         "\n",
-        "#fit simple linear regression model\n",
-        "model = sm.OLS(y, X).fit()\n",
-        "print(model.summary())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 17,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['425 %Al', 'DI55152', 'TC55555']\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Convert summary to DataFrame\n",
-        "summary_table = model.summary().tables[1]\n",
-        "summary_df = pd.DataFrame(summary_table.data[1:], columns=summary_table.data[0])\n",
+        "# Create a GAM with splines for the specified features\n",
+        "gam = LinearGAM(s(feature_indices[0]) + s(feature_indices[1]) + s(feature_indices[2]))\n",
         "\n",
-        "# Convert necessary columns to numeric\n",
-        "numeric_cols = ['coef', 'std err', 't', 'P>|t|', '[0.025', '0.975]']\n",
-        "summary_df[numeric_cols] = summary_df[numeric_cols].apply(pd.to_numeric, errors='coerce')\n",
+        "# Fit the GAM model\n",
+        "gam.fit(X_train, y_train)\n",
         "\n",
-        "# Apply the filter for insignificance and CI crossing zero\n",
-        "threshold = 0.05\n",
-        "filtered_df = summary_df[(summary_df['P>|t|'] > threshold) & ((summary_df['[0.025'] < 0) & (summary_df['0.975]'] > 0))]\n",
-        "\n",
-        "# Extracting the feature names\n",
-        "insignificant_features = filtered_df.iloc[:, 0].tolist()  # First column contains feature names\n",
-        "print(insignificant_features)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 18,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "               coef  std err      t  P>|t|  [0.025  0.975]\n",
-            "0   425 %Al -0.0430    0.148 -0.290  0.772  -0.334   0.248\n",
-            "2   DI55152 -2.3942    1.337 -1.791  0.073  -5.014   0.226\n",
-            "22  TC55555 -0.0037    0.014 -0.258  0.797  -0.032   0.024\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(filtered_df)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 19,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "Significant Features:\n",
-            "['DI55102', 'DI55580', 'FC42428', 'FC55003', 'FC55569', 'FC55576', 'FFC55553', 'FFC55555', 'LC52572', 'LC55553', 'LC55555', 'LC55557', 'LC55568', 'LC90366', 'LC90368', 'PI55004', 'PI55020', 'TC55552', 'TC55553']\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Filter for significant features\n",
-        "significant_df = summary_df[(summary_df['P>|t|'] <= threshold) & ((summary_df['[0.025'] > 0) | (summary_df['0.975]'] < 0))]\n",
-        "significant_features = significant_df.iloc[:, 0].tolist()\n",
-        "print(\"\\nSignificant Features:\")\n",
-        "print(significant_features)"
+        "# Evaluate the model\n",
+        "print(gam.summary())\n"
       ]
     }
   ],
