--- a/1 Preprocess/Merge Data/1.1.1 IM - Create Dataset.ipynb
+++ b/1 Preprocess/Merge Data/1.1.1 IM - Create Dataset.ipynb
@@ -12,15 +12,9 @@
         "import pandas as pd\n",
         "# Set max columns to display\n",
         "pd.set_option('display.max_columns', None)\n",
-        "\n",
-        "import numpy as np\n",
         "from sklearn import preprocessing as pre\n",
-        "import matplotlib.pyplot as plt\n",
-        "from scipy import stats\n",
         "import statsmodels.api as sm\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import mean_squared_error, r2_score\n",
-        "\n"
+        "from sklearn.model_selection import train_test_split"
       ]
     },
     {
@@ -34,9 +28,9 @@
       "source": [
         "\n",
         "# Importing CSV files\n",
-        "df_CDunit = pd.read_csv(r\"C:\\Users\\saust\\OneDrive - Sasol\\1 Project rC4\\Jupyter Notebooks\\1 Preprocess\\Continuous Data\\cont_unitData_clean.csv\")\n",
-        "df_AlCon = pd.read_csv(r\"C:\\Users\\saust\\OneDrive - Sasol\\1 Project rC4\\Jupyter Notebooks\\1 Preprocess\\Continuous Data\\cont_425Data_clean.csv\")\n",
-        "df_FB554 = pd.read_csv(r\"C:\\Users\\saust\\OneDrive - Sasol\\1 Project rC4\\Jupyter Notebooks\\1 Preprocess\\Continuous Data\\cont_554Data_clean.csv\")\n"
+        "df_CDunit = pd.read_csv(r\"C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\1 Preprocess\\Continuous Data\\cont_554Data_clean.csv\")\n",
+        "df_AlCon = pd.read_csv(r\"C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\1 Preprocess\\Continuous Data\\cont_425Data_clean.csv\")\n",
+        "df_FB554 = pd.read_csv(r\"C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\1 Preprocess\\Continuous Data\\cont_unitData_clean.csv\")\n"
       ]
     },
     {
@@ -51,113 +45,73 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "           AYC55580       DI55102       DI55152       DI55580       FC42428  \\\n",
-            "count  49239.000000  49239.000000  49239.000000  49239.000000  49239.000000   \n",
-            "mean      11.266268      0.929918      0.941470      0.997989  35926.808144   \n",
-            "std        4.622232      0.067214      0.039545      0.049746   5103.120658   \n",
-            "min       -2.825930      0.794541      0.818505      0.844666  16906.900000   \n",
-            "25%        9.714050      0.892178      0.915156      0.966571  33984.800000   \n",
-            "50%       10.767700      0.940556      0.937905      0.997402  37734.700000   \n",
-            "75%       13.391700      0.980936      0.961704      1.032280  39364.100000   \n",
-            "max       25.133700      1.068230      1.063430      1.135600  49959.600000   \n",
-            "\n",
-            "            FC52018       FC55003       FC55009       FC55102       FC55152  \\\n",
-            "count  49239.000000  49239.000000  49239.000000  49239.000000  49239.000000   \n",
-            "mean   32706.413168   5961.217965    869.257900  44691.095554  40539.984571   \n",
-            "std     6023.684555    832.099515    608.120131   6069.205066   5242.871651   \n",
-            "min    12957.700000   2882.880000      0.000000  20954.800000  19729.300000   \n",
-            "25%    29052.100000   5439.800000    376.011500  41476.350000  38707.150000   \n",
-            "50%    32731.400000   5979.580000    865.565000  45986.900000  41626.600000   \n",
-            "75%    36282.350000   6523.615000   1342.055000  48688.300000  43796.100000   \n",
-            "max    50000.000000   9009.590000   2671.660000  62848.200000  57371.200000   \n",
-            "\n",
-            "            FC55552       FC55555       FC55569       FC55576      FFC55553  \\\n",
-            "count  49239.000000  49239.000000  49239.000000  49239.000000  49239.000000   \n",
-            "mean   36376.409801  28172.182126   6597.565752    370.795627      0.993804   \n",
-            "std     4087.826711   3318.572614    359.033969    255.208069      0.039461   \n",
-            "min    19431.600000  14723.300000   5167.950000      0.000000      0.814458   \n",
-            "25%    35226.250000  27386.850000   6376.420000    197.528000      0.970079   \n",
-            "50%    37942.800000  29250.800000   6572.330000    342.974000      0.991878   \n",
-            "75%    38995.350000  30212.000000   6802.945000    525.286000      1.012520   \n",
-            "max    46356.900000  34638.100000   8014.950000   1156.400000      1.169830   \n",
-            "\n",
-            "           FFC55555      FYC55553       II52554       LC52572       LC55553  \\\n",
-            "count  49239.000000  49239.000000  49239.000000  49239.000000  49239.000000   \n",
-            "mean       0.774196  36113.889577    171.133600     63.061658     63.507590   \n",
-            "std        0.022952   4033.459794     28.161559      2.543381      6.895367   \n",
-            "min        0.697063  18810.000000     81.084500     53.812500     42.445600   \n",
-            "25%        0.759486  34630.350000    151.348000     61.733100     60.102750   \n",
-            "50%        0.778021  37388.300000    168.624000     63.298600     65.378700   \n",
-            "75%        0.789994  38765.900000    189.566500     64.897300     68.112450   \n",
-            "max        0.850169  46156.700000    259.451000     72.093800     82.753500   \n",
-            "\n",
-            "            LC55555       LC55557       LC55568       LC90366       LC90368  \\\n",
-            "count  49239.000000  49239.000000  49239.000000  49239.000000  49239.000000   \n",
-            "mean      57.984959     69.792690     41.094363     47.201355     38.308711   \n",
-            "std       10.572684      3.033162      1.486204     28.048134     20.243559   \n",
-            "min       27.970000     60.183500     32.425100      0.000000      0.006367   \n",
-            "25%       49.635700     67.946550     40.593800     23.386400     23.243750   \n",
-            "50%       60.017100     70.125000     41.208500     49.816400     43.977700   \n",
-            "75%       66.908700     71.902350     41.580900     73.613150     53.482550   \n",
-            "max       82.809000     79.319900     49.070100     87.901600     81.210800   \n",
-            "\n",
-            "            PI55004       PI55020       PI55560       TC52015       TC55552  \\\n",
-            "count  49239.000000  49239.000000  49239.000000  49239.000000  49239.000000   \n",
-            "mean       2.224592     -1.479523      1.001525     75.091381    168.734102   \n",
-            "std        1.170256      1.105188      0.977671     16.558697     15.298685   \n",
-            "min        0.001366     -4.808760     -2.094890     27.143100    120.611000   \n",
-            "25%        1.286425     -2.317740      0.231558     64.254700    156.048000   \n",
-            "50%        2.000880     -1.462750      0.792035     76.003800    172.474000   \n",
-            "75%        3.009200     -0.498625      1.679370     84.912350    180.928500   \n",
-            "max        6.299380      1.895150      4.442870    121.783000    207.426000   \n",
-            "\n",
-            "            TC55553       TC55555       TC55566       TI40050       TI52014  \\\n",
-            "count  49239.000000  49239.000000  49239.000000  49239.000000  49239.000000   \n",
-            "mean     182.710330    180.979494    196.952255     73.786672    129.984184   \n",
-            "std       27.958602      1.478328     12.864912     15.274405     12.201610   \n",
-            "min      110.534000    175.958000    156.727000     27.582300     96.720000   \n",
-            "25%      162.713000    179.967000    185.816500     63.131900    121.371000   \n",
-            "50%      176.777000    180.124000    199.969000     76.939900    130.516000   \n",
-            "75%      201.303500    181.988000    205.058000     85.300900    139.365500   \n",
-            "max      261.360000    186.263000    227.835000    118.700000    164.186000   \n",
-            "\n",
-            "            TI55013       TI55014       TI55015       TI55016       TI55017  \\\n",
-            "count  49239.000000  49239.000000  49239.000000  49239.000000  49239.000000   \n",
-            "mean     201.839939    197.779209    195.492283    190.596412    186.470068   \n",
-            "std       17.740798     13.729117     13.604437      9.182114      9.686494   \n",
-            "min      161.963000    169.311000    166.079000    171.047000    159.702000   \n",
-            "25%      187.861000    187.105000    185.019500    183.475000    179.121500   \n",
-            "50%      199.896000    196.421000    194.148000    189.374000    185.547000   \n",
-            "75%      214.156000    206.994000    204.484500    196.705500    192.840500   \n",
-            "max      248.095000    232.105000    230.897000    214.243000    211.069000   \n",
-            "\n",
-            "            TI55021       TI55023      VI52558B  \n",
-            "count  49239.000000  49239.000000  49239.000000  \n",
-            "mean     223.102354    218.562016      2.798626  \n",
-            "std        9.224274      3.761215      0.953890  \n",
-            "min      207.365000    206.266000      0.242948  \n",
-            "25%      217.672000    215.586000      2.127005  \n",
-            "50%      220.707000    217.880000      2.631580  \n",
-            "75%      224.423500    221.263000      3.278840  \n",
-            "max      256.842000    231.571000      6.393180  \n",
+            "            Butanol\n",
+            "count  54012.000000\n",
+            "mean       9.616727\n",
+            "std       10.163612\n",
+            "min        0.000000\n",
+            "25%        3.737802\n",
+            "50%        5.793330\n",
+            "75%       10.633775\n",
+            "max       58.722400\n",
             "            425 %Al\n",
-            "count  49239.000000\n",
-            "mean       6.128383\n",
-            "std        0.259211\n",
-            "min        5.085150\n",
-            "25%        5.989465\n",
-            "50%        6.131540\n",
-            "75%        6.271300\n",
-            "max        7.176800\n",
-            "            Butanol       Decanol       Ethanol       Hexanol       Octanol\n",
-            "count  49239.000000  49239.000000  49239.000000  49239.000000  49239.000000\n",
-            "mean       8.937153      3.058669     18.665638      3.448266      4.036667\n",
-            "std        9.111211      1.544267     17.842920      1.959893      2.164377\n",
-            "min        0.000000      0.000000      0.000000      0.000000      0.000000\n",
-            "25%        3.687945      1.848935      5.755000      1.834645      2.179850\n",
-            "50%        5.666670      2.926690     12.583300      3.173060      3.891070\n",
-            "75%        9.923330      4.089750     25.576700      4.780000      5.547905\n",
-            "max       56.812800      8.029860     94.008400     10.333300     10.580000\n"
+            "count  54012.000000\n",
+            "mean       6.131241\n",
+            "std        0.258970\n",
+            "min        5.089190\n",
+            "25%        5.991428\n",
+            "50%        6.133225\n",
+            "75%        6.274580\n",
+            "max        7.173480\n",
+            "            DI55102       DI55152       DI55580       FC42428       FC55003  \\\n",
+            "count  54012.000000  54012.000000  54012.000000  54012.000000  54012.000000   \n",
+            "mean       0.929994      0.941750      0.997958  35836.107730   5952.945003   \n",
+            "std        0.067254      0.039547      0.049932   5224.810968    848.116136   \n",
+            "min        0.749916      0.817618      0.844666  16329.300000   2835.740000   \n",
+            "25%        0.892624      0.915336      0.966470  33853.275000   5418.517500   \n",
+            "50%        0.940790      0.938520      0.997832  37707.500000   5971.345000   \n",
+            "75%        0.980906      0.962228      1.032240  39361.125000   6524.025000   \n",
+            "max        1.068230      1.065010      1.144600  49959.600000   9052.540000   \n",
+            "\n",
+            "            FC55552       FC55569       FC55576      FFC55553      FFC55555  \\\n",
+            "count  54012.000000  54012.000000  54012.000000  54012.000000  54012.000000   \n",
+            "mean   36272.412858   6597.893189    376.305297      0.994843      0.774018   \n",
+            "std     4292.665558    368.996191    255.777648      0.040149      0.023266   \n",
+            "min    18922.400000   5167.460000      0.000000      0.811764      0.694477   \n",
+            "25%    35091.675000   6371.432500    202.940000      0.970274      0.759399   \n",
+            "50%    37938.800000   6578.000000    348.692500      0.993260      0.777864   \n",
+            "75%    38994.725000   6812.530000    543.986000      1.016520      0.789928   \n",
+            "max    46356.900000   8014.950000   1163.020000      1.170060      0.853458   \n",
+            "\n",
+            "            LC52572       LC55553       LC55555       LC55557       LC55568  \\\n",
+            "count  54012.000000  54012.000000  54012.000000  54012.000000  54012.000000   \n",
+            "mean      63.074773     63.420477     58.060675     69.764047     41.077603   \n",
+            "std        2.600417      6.917031     10.593966      3.042409      1.501380   \n",
+            "min       53.483600     42.429300     26.868600     60.006600     32.353800   \n",
+            "25%       61.733825     59.996950     49.531475     67.896175     40.557600   \n",
+            "50%       63.343800     65.341300     60.028950     70.117550     41.202450   \n",
+            "75%       64.906300     68.096425     67.007525     71.911900     41.577200   \n",
+            "max       72.423800     83.548700     82.809000     79.508200     49.255100   \n",
+            "\n",
+            "            LC90366       LC90368       PI55004       PI55020       TC55552  \\\n",
+            "count  54012.000000  54012.000000  54012.000000  54012.000000  54012.000000   \n",
+            "mean      47.060293     38.466543      2.241804     -1.474149    168.736278   \n",
+            "std       28.049958     20.408456      1.201207      1.107205     15.190144   \n",
+            "min        0.000000      0.006367      0.001366     -4.803710    120.273000   \n",
+            "25%       23.257500     23.243800      1.285995     -2.321870    156.125000   \n",
+            "50%       49.849150     44.414350      2.004730     -1.459085    172.436000   \n",
+            "75%       73.275400     53.735625      3.029292     -0.493724    180.854250   \n",
+            "max       87.901600     81.210800      6.333520      1.983020    207.426000   \n",
+            "\n",
+            "            TC55553       TC55555  \n",
+            "count  54012.000000  54012.000000  \n",
+            "mean     182.540058    181.001699  \n",
+            "std       28.275171      1.497583  \n",
+            "min      110.245000    175.660000  \n",
+            "25%      162.161750    179.968000  \n",
+            "50%      176.690000    180.125000  \n",
+            "75%      201.563500    182.003000  \n",
+            "max      261.360000    186.494000  \n"
           ]
         }
       ],
@@ -229,16 +183,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Index(['Date', 'AYC55580', 'DI55102', 'DI55152', 'DI55580', 'FC42428',\n",
-            "       'FC52018', 'FC55003', 'FC55009', 'FC55102', 'FC55152', 'FC55552',\n",
-            "       'FC55555', 'FC55569', 'FC55576', 'FFC55553', 'FFC55555', 'FYC55553',\n",
-            "       'II52554', 'LC52572', 'LC55553', 'LC55555', 'LC55557', 'LC55568',\n",
-            "       'LC90366', 'LC90368', 'PI55004', 'PI55020', 'PI55560', 'TC52015',\n",
-            "       'TC55552', 'TC55553', 'TC55555', 'TC55566', 'TI40050', 'TI52014',\n",
-            "       'TI55013', 'TI55014', 'TI55015', 'TI55016', 'TI55017', 'TI55021',\n",
-            "       'TI55023', 'VI52558B'],\n",
+            "Index(['Date', 'Butanol'], dtype='object')\n",
+            "Index(['Date', 'DI55102', 'DI55152', 'DI55580', 'FC42428', 'FC55003',\n",
+            "       'FC55552', 'FC55569', 'FC55576', 'FFC55553', 'FFC55555', 'LC52572',\n",
+            "       'LC55553', 'LC55555', 'LC55557', 'LC55568', 'LC90366', 'LC90368',\n",
+            "       'PI55004', 'PI55020', 'TC55552', 'TC55553', 'TC55555'],\n",
             "      dtype='object')\n",
-            "Index(['Date', 'Butanol', 'Decanol', 'Ethanol', 'Hexanol', 'Octanol'], dtype='object')\n",
             "Index(['Date', '425 %Al'], dtype='object')\n"
           ]
         }
@@ -376,6 +326,18 @@
       "cell_type": "code",
       "execution_count": 13,
       "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Iterative merger \n",
+        "# avereaged F stat\n",
+        "# filtered two closest f stats by whole number\n",
+        "# Took the best adj R^2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
@@ -388,7 +350,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\saust\\AppData\\Local\\Temp\\ipykernel_74840\\2705700377.py:73: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+            "C:\\Users\\saust\\AppData\\Local\\Temp\\ipykernel_98580\\2705700377.py:73: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
             "  results = results.append(iteration_results, ignore_index=True)\n"
           ]
         }
@@ -479,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -489,7 +451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
