--- a/3 Feature Selection/1.0.1 OLS_contData.ipynb
+++ b/3 Feature Selection/1.0.1 OLS_contData.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 12,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -45,21 +45,54 @@
             "3  6.336760  32.845950  1.928805  87.080875  2.288335  2.897523  15.779400   \n",
             "4  6.337460  33.387025  2.352595  84.489175  2.734682  3.571185  15.199680   \n",
             "\n",
-            "    DI55102   DI55152   DI55580  ...    TI40050   TI52014     TI55013  \\\n",
-            "0  0.963347  0.924879  1.017340  ...  81.156900  131.0990  236.672000   \n",
-            "1  0.965043  0.924515  1.014885  ...  82.965650  132.3490  230.501000   \n",
-            "2  0.968107  0.929955  1.015593  ...  82.461167  133.0350  223.885667   \n",
-            "3  0.969573  0.932388  1.014703  ...  83.676300  134.0690  219.719750   \n",
-            "4  0.971022  0.934531  1.014094  ...  85.328040  134.8424  217.253200   \n",
+            "    DI55102   DI55152   DI55580      FC42428      FC52018    FC55003  \\\n",
+            "0  0.963347  0.924879  1.017340  40773.90000  42583.40000  5622.8300   \n",
+            "1  0.965043  0.924515  1.014885  40816.90000  44547.30000  5308.8850   \n",
+            "2  0.968107  0.929955  1.015593  41080.96667  45105.73333  5489.7400   \n",
+            "3  0.969573  0.932388  1.014703  41606.60000  45413.77500  5709.1825   \n",
+            "4  0.971022  0.934531  1.014094  41722.12000  45547.02000  5653.1640   \n",
             "\n",
-            "      TI55014     TI55015   TI55016    TI55017  TI55021     TI55023  VI52558B  \n",
-            "0  223.704000  216.905000  207.7370  205.81700  213.813  212.301000  4.969810  \n",
-            "1  220.794000  216.033500  207.2460  205.70300  213.874  212.308500  4.616265  \n",
-            "2  214.879667  209.812667  202.7230  201.16400  214.433  212.926667  4.741457  \n",
-            "3  211.567250  206.503250  200.5075  199.00025  214.639  213.051250  4.436797  \n",
-            "4  209.326600  204.214800  198.6922  197.25440  214.733  213.071400  4.304762  \n",
+            "       FC55009      FC55102      FC55152   FC55552      FC55555      FC55569  \\\n",
+            "0  1770.180000  54668.30000  48447.40000  40424.10  30465.70000  6928.310000   \n",
+            "1  1182.393500  56315.80000  51242.20000  40409.25  30406.75000  6924.645000   \n",
+            "2   988.753333  55482.66667  50152.73333  40606.30  30908.93333  6925.813333   \n",
+            "3   862.683250  53522.02500  48242.85000  39171.20  29965.95000  6920.290000   \n",
+            "4   794.212400  52775.74000  47829.90000  39099.64  30056.26000  6916.018000   \n",
             "\n",
-            "[5 rows x 49 columns]\n"
+            "    FC55576  FFC55553  FFC55555     FYC55553     II52554    LC52572  \\\n",
+            "0  329.7610  1.045930  0.752379  42478.80000  228.724000  66.534100   \n",
+            "1  322.1770  1.049540  0.751183  42511.25000  237.562000  66.523200   \n",
+            "2  324.9680  1.050217  0.761243  42628.66667  240.325333  66.500500   \n",
+            "3  331.7720  1.050780  0.766600  41075.47500  241.663250  66.336525   \n",
+            "4  336.2358  1.051672  0.770305  40994.10000  242.179800  65.981980   \n",
+            "\n",
+            "     LC55553    LC55555    LC55557    LC55568    LC90366    LC90368   PI55004  \\\n",
+            "0  62.176800  60.362200  65.484000  40.136500  16.706900  49.278800  1.044590   \n",
+            "1  62.921050  60.446750  66.313950  40.252500  15.449150  49.267500  1.236360   \n",
+            "2  62.651867  60.350800  66.212233  40.059967  10.931340  48.643200  1.189883   \n",
+            "3  62.526325  60.118475  65.893675  39.835675   8.674930  48.382975  1.343838   \n",
+            "4  62.293540  60.150020  66.212620  40.179880   7.325074  48.332800  1.535224   \n",
+            "\n",
+            "    PI55020   PI55560    TC52015     TC55552     TC55553   TC55555   TC55566  \\\n",
+            "0 -0.437499 -0.264240  74.632500  178.773000  235.047000  179.6930  211.7810   \n",
+            "1 -0.389406 -0.279771  78.195800  179.011500  213.937500  179.9940  211.7810   \n",
+            "2 -0.377156 -0.106293  77.691633  180.276667  205.221667  180.0530  212.3670   \n",
+            "3 -0.366302 -0.057496  79.090850  180.993250  198.353500  180.5790  212.4105   \n",
+            "4 -0.327278 -0.047609  81.854140  181.511000  195.641600  180.2476  212.4664   \n",
+            "\n",
+            "     TI40050   TI52014     TI55013     TI55014     TI55015   TI55016  \\\n",
+            "0  81.156900  131.0990  236.672000  223.704000  216.905000  207.7370   \n",
+            "1  82.965650  132.3490  230.501000  220.794000  216.033500  207.2460   \n",
+            "2  82.461167  133.0350  223.885667  214.879667  209.812667  202.7230   \n",
+            "3  83.676300  134.0690  219.719750  211.567250  206.503250  200.5075   \n",
+            "4  85.328040  134.8424  217.253200  209.326600  204.214800  198.6922   \n",
+            "\n",
+            "     TI55017  TI55021     TI55023  VI52558B  \n",
+            "0  205.81700  213.813  212.301000  4.969810  \n",
+            "1  205.70300  213.874  212.308500  4.616265  \n",
+            "2  201.16400  214.433  212.926667  4.741457  \n",
+            "3  199.00025  214.639  213.051250  4.436797  \n",
+            "4  197.25440  214.733  213.071400  4.304762  \n"
           ]
         }
       ],
@@ -75,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -93,7 +126,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -104,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 16,
       "metadata": {
         "trusted": true
       },
@@ -116,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -133,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -149,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -166,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -179,7 +212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -192,7 +225,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -203,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -215,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -228,7 +261,7 @@
             "Model:                            OLS   Adj. R-squared (uncentered):              0.606\n",
             "Method:                 Least Squares   F-statistic:                              3295.\n",
             "Date:                Fri, 01 Dec 2023   Prob (F-statistic):                        0.00\n",
-            "Time:                        20:38:44   Log-Likelihood:                     -1.7134e+05\n",
+            "Time:                        22:14:38   Log-Likelihood:                     -1.7134e+05\n",
             "No. Observations:               49239   AIC:                                  3.427e+05\n",
             "Df Residuals:                   49216   BIC:                                  3.429e+05\n",
             "Df Model:                          23                                                  \n",
@@ -286,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -317,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
@@ -337,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
