--- a/3 Feature Selection/1.0.4 XGB_contData_iter copy.ipynb
+++ b/3 Feature Selection/1.0.4 XGB_contData_iter copy.ipynb
@@ -31,7 +31,11 @@
         "from sklearn.model_selection import train_test_split\n",
         "import itertools\n",
         "import random\n",
-        "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n"
+        "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
+        "import xgboost as xgb\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import random\n",
+        "import pandas as pd"
       ]
     },
     {
@@ -105,6 +109,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "\n",
+        "\n",
+        "\n",
         "# List of columns to exclude to run XGboost feature selection\n",
         "exclude_columns = ['Octanol', 'Hexanol',\n",
         "       'Ethanol', 'Decanol',\n",
